set CI to run on master and pr only

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,5 +1,14 @@
-jobs:
+trigger:
+  branches:
+    include:
+    - 'master'
+pr:
+  autoCancel: true
+  branches:
+    include:
+    - '*'
 
+jobs:
 - job:
   displayName: ubuntu-16.04
   pool:
